# essrpc

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  notes.org
.github/workflows/: ci.yml
essrpc/: Cargo.toml
essrpc/src/: lib.rs
essrpc/src/transports/: bincode.rs  json.rs  mod.rs
essrpc/tests/: async.rs  basic.rs
essrpc_macros/: Cargo.toml
essrpc_macros/src/: lib.rs
essrpc_macros/tests/: basic.rs
src/: lib.rs
src/transforms/: json.rs  mod.rs
src/transports/: json.rs  mod.rs
test_expand/: Cargo.toml
test_expand/src/: main.rs
