[package]
name = "essrpc"
version = "0.3.1"
edition = "2018"
authors = ["James Oakley <james@electronstudio.org>"]
description = "RPC using natural trait definitions and calls."
readme = "../README.md"
keywords = ["rpc"]
license = "MIT"
repository = "https://github.com/Electron100/essrpc"
documentation = "https://docs.rs/essrpc/"

[features]
bincode_transport = ["bincode"]
json_transport = ["serde_json", "uuid"]
async_client = ["futures"]
wasm_bindgen = ["uuid/wasm-bindgen"]

[dependencies]
futures = { version = "0.3", optional=true }
serde = { version = "1.0", features = ["derive"] }
essrpc_macros = { path = "../essrpc_macros", version = "0.3" }
bincode = { version="1.0", optional=true }
serde_json = { version="1.0", optional=true }
uuid = { version = "0.7", features = ["v4"], optional=true }


[package.metadata.docs.rs]
all-features = true