[package]
name = "essrpc"
version = "0.4.0"
edition = "2018"
authors = ["James Oakley <james@electronstudio.org>"]
description = "RPC using natural trait definitions and calls."
readme = "../README.md"
keywords = ["rpc"]
license = "MIT"
repository = "https://github.com/Electron100/essrpc"
documentation = "https://docs.rs/essrpc/"

[features]
bincode_transport = ["bincode"]
json_transport = ["serde_json", "uuid", "json"]
async_client = ["futures", "async-trait", "tokio", "tokio-util"]
wasm_bindgen = ["uuid/wasm-bindgen"]

[dependencies]
async-trait = { version = "0.1", optional=true }
bytes = "1"
futures = { version = "0.3", optional=true }
json = { version = "0.12", optional=true }
serde = { version = "1.0", features = ["derive"] }
essrpc_macros = { path = "../essrpc_macros", version = "0.3" }
bincode = { version="1.0", optional=true }
parking_lot = "0.11"
serde_json = { version="1.0", optional=true }
tokio = { version="1", optional=true }
tokio-util = { version = "0.6", features = ["codec"], optional=true }
uuid = { version = "0.7", features = ["v4"], optional=true }

[dev-dependencies]
tokio = { version = "1.11", features = ["full"] }
tokio-util = { version = "0.6", features = ["compat"] }
tokio-jsoncodec = "0.1"
readwrite = { version = "0.2.0", features = ["tokio"] }

[package.metadata.docs.rs]
all-features = true