[package]
name = "essrpc_macros"
version = "0.1.0"
authors = ["James Oakley <james@electronstudio.org>"]

[dependencies]
proc-macro2 = "0.4"
quote = "0.6.0"
syn = { version = "0.15.0", features = ["full"] }

[dev-dependencies]
failure = "0.1.3"
essrpc = { path = "../essrpc", version = "0.1.0" }
serde = "1.0"
serde_derive = "1.0"

[lib]
proc-macro = true

