[package]
name = "essrpc_macros"
version = "0.1.0"
authors = ["James Oakley <james@electronstudio.org>"]
description = "Macros for ESSRPC. Do not use this crate directly -- use the essrpc crate."
license = "MIT"
license-file = "../LICENSE"

[dependencies]
proc-macro2 = "0.4"
quote = "0.6.0"
syn = { version = "0.15.0", features = ["full", "extra-traits"] }

[lib]
proc-macro = true

